# execDAT-CLI

./: .gitignore  Cargo.toml  README.md  new_output.yaml  test-config-output.yaml  test-config.yaml
.github/workflows/: build-release.yml  build.yml  ci-cd.yml  ci.yml  release.yml
src/: build_parser.rs  cli.rs  devfile_parser.rs  lib.rs  main.rs  parser.rs  run_parser.rs
src/config/: template-config-original.yaml
tests/: test.rs
