[package]
name = "execd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.28"
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
kube = { version = "0.82.2", features = ["runtime", "derive"] }
kube-derive = "0.82.2"
schemars = "0.8.12"
serde = { version = "^1.0.159", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.19"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
